veygo-app/main/default/objects/Case/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>