veygo-app/main/default/objects/Case/fields/AmountToBePaid__c.field-meta.xml
<CustomField>
    <fullName>AmountToBePaid__c</fullName>
    <label>Amount to be paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>