veygo-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General query</fullName>
            </value>
            <value>
                <fullName>Incident not covered</fullName>
            </value>
            <value>
                <fullName>Liability/TP claim</fullName>
            </value>
            <value>
                <fullName>New claim/CDC</fullName>
            </value>
            <value>
                <fullName>Repair/TL Update</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>CRIF Claim</fullName>
            </value>
            <value>
                <fullName>Max ALF</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>DPA Request</fullName>
            </value>
            <value>
                <fullName>MIB</fullName>
            </value>
            <value>
                <fullName>Police Request</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Admiral</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Risk Event</fullName>
            </value>
            <value>
                <fullName>CRIF call failed</fullName>
            </value>
            <value>
                <fullName>Driver/owner name bug</fullName>
            </value>
            <value>
                <fullName>Error 404</fullName>
            </value>
            <value>
                <fullName>New Registration</fullName>
            </value>
            <value>
                <fullName>One account per driver</fullName>
            </value>
            <value>
                <fullName>Forgotten account details</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>