veygo-app/main/default/objects/Case/fields/ClaimReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimReferenceNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Reference Number</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>