veygo-app/main/default/objects/Case/fields/CompensationGiven__c.field-meta.xml
<CustomField>
    <fullName>CompensationGiven__c</fullName>
    <label>Compensation Given</label>
    <length>255</length>
    <type>Text</type>
</CustomField>