veygo-app/main/default/objects/Case/fields/ComplaintBrand__c.field-meta.xml
<CustomField>
    <fullName>ComplaintBrand__c</fullName>
    <label>Complaint Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>