veygo-app/main/default/objects/Case/fields/ComplaintInvestigationOutcome__c.field-meta.xml
<CustomField>
    <fullName>ComplaintInvestigationOutcome__c</fullName>
    <label>Complaint Investigation Outcome</label>
    <type>TextArea</type>
</CustomField>