veygo-app/main/default/objects/Case/fields/ComplaintPoints__c.field-meta.xml
<CustomField>
    <fullName>ComplaintPoints__c</fullName>
    <label>Complaint Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>