veygo-app/main/default/objects/Case/fields/ComplaintRecieved__c.field-meta.xml
<CustomField>
    <fullName>ComplaintRecieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complaint Recieved</label>
    <type>Checkbox</type>
</CustomField>