veygo-app/main/default/objects/Case/fields/ComplaintTrigger__c.field-meta.xml
<CustomField>
    <fullName>ComplaintTrigger__c</fullName>
    <label>Complaint Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>