veygo-app/main/default/objects/Case/fields/CRS_LetterEmailIssued__c.field-meta.xml
<CustomField>
    <fullName>CRS_LetterEmailIssued__c</fullName>
    <label>CRS letter / email issued</label>
    <length>255</length>
    <type>Text</type>
</CustomField>