veygo-app/main/default/objects/Case/fields/CustomerDataProtectionVerified__c.field-meta.xml
<CustomField>
    <fullName>CustomerDataProtectionVerified__c</fullName>
    <label>Customer Data Protection Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>