veygo-app/main/default/objects/Case/fields/Data_Protection__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Protection</label>
    <type>Checkbox</type>
</CustomField>