veygo-app/main/default/objects/Case/fields/DateTimeAccidentHappened__c.field-meta.xml
<CustomField>
    <fullName>DateTimeAccidentHappened__c</fullName>
    <label>Date/Time accident happened</label>
    <type>DateTime</type>
</CustomField>