veygo-app/main/default/objects/Case/fields/EscalatedCallNumbers__c.field-meta.xml
<CustomField>
    <fullName>EscalatedCallNumbers__c</fullName>
    <label>Escalated call number(s)</label>
    <type>TextArea</type>
</CustomField>