veygo-app/main/default/objects/Case/fields/FCA_Partner__c.field-meta.xml
<CustomField>
    <fullName>FCA_Partner__c</fullName>
    <label>FCA Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>