veygo-app/main/default/objects/Case/fields/FCA_ProductType__c.field-meta.xml
<CustomField>
    <fullName>FCA_ProductType__c</fullName>
    <label>FCA Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Motorbike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>