veygo-app/main/default/objects/Case/fields/FrontLineNumbers__c.field-meta.xml
<CustomField>
    <fullName>FrontLineNumbers__c</fullName>
    <label>Front line call number(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>