veygo-app/main/default/objects/Case/fields/HumanError__c.field-meta.xml
<CustomField>
    <fullName>HumanError__c</fullName>
    <label>Human Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>