veygo-app/main/default/objects/Case/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <label>Insurance Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>