veygo-app/main/default/objects/Case/fields/JustificationForDesition__c.field-meta.xml
<CustomField>
    <fullName>JustificationForDesition__c</fullName>
    <label>Justification for Desition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>