veygo-app/main/default/objects/Case/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Payment Method</label>
    <referenceTo>FinServ__PolicyPaymentMethod__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>