veygo-app/main/default/objects/Case/fields/PolicyPaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>PolicyPaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Payment Method</label>
    <referenceTo>FinServ__PolicyPaymentMethod__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>