veygo-app/main/default/objects/Case/fields/ProblemType__c.field-meta.xml
<CustomField>
    <fullName>ProblemType__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crif call failure</fullName>
            </value>
            <value>
                <fullName>Driver/Owner Name</fullName>
            </value>
            <value>
                <fullName>Help Center Feedback</fullName>
            </value>
            <value>
                <fullName>Mylicense Error 404</fullName>
            </value>
            <value>
                <fullName>Mylicense MC/MAC</fullName>
            </value>
            <value>
                <fullName>New Registration</fullName>
            </value>
            <value>
                <fullName>One account per driver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payment Method</fullName>
            </value>
            <value>
                <fullName>QE Messaging</fullName>
            </value>
            <value>
                <fullName>Reg not recognized</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Third party technical</fullName>
            </value>
            <value>
                <fullName>Upgrade license issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>