veygo-app/main/default/objects/Case/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative insurance</fullName>
            </value>
            <value>
                <fullName>Business Use</fullName>
            </value>
            <value>
                <fullName>Can I extend (Temp &amp; Learner?)</fullName>
            </value>
            <value>
                <fullName>Can I get a quote?</fullName>
            </value>
            <value>
                <fullName>Car type</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Declined cover</fullName>
            </value>
            <value>
                <fullName>Driving test</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>NCB</fullName>
            </value>
            <value>
                <fullName>NHS Discount</fullName>
            </value>
            <value>
                <fullName>Non GB</fullName>
            </value>
            <value>
                <fullName>Not showing on MID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Police Impound</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Quote Price</fullName>
            </value>
            <value>
                <fullName>Relationship/Owner</fullName>
            </value>
            <value>
                <fullName>Rental Closed</fullName>
            </value>
            <value>
                <fullName>Supervising passenger</fullName>
            </value>
            <value>
                <fullName>Tax &amp; MOT</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>