veygo-app/main/default/objects/Case/fields/RefferalLink__c.field-meta.xml
<CustomField>
    <fullName>RefferalLink__c</fullName>
    <label>Refferal link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>