veygo-app/main/default/objects/Case/fields/ResolutionOffered__c.field-meta.xml
<CustomField>
    <fullName>ResolutionOffered__c</fullName>
    <label>Resolution Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>