veygo-app/main/default/objects/Case/fields/SendSurvey__c.field-meta.xml
<CustomField>
    <fullName>SendSurvey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Survey</label>
    <type>Checkbox</type>
</CustomField>