veygo-app/main/default/objects/Case/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Change Account Email</fullName>
            </value>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Change Car on cover</fullName>
            </value>
            <value>
                <fullName>Change Customer Error</fullName>
            </value>
            <value>
                <fullName>Change License Type</fullName>
            </value>
            <value>
                <fullName>Change Private plate</fullName>
            </value>
            <value>
                <fullName>Check Policy Details</fullName>
            </value>
            <value>
                <fullName>Covid Cancellation</fullName>
            </value>
            <value>
                <fullName>NHS Refund</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>