veygo-app/main/default/objects/Case/fields/Vulnerable_Customer__c.field-meta.xml
<CustomField>
    <fullName>Vulnerable_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vulnerable Customer</label>
    <type>Checkbox</type>
</CustomField>