veygo-app/main/default/objects/Case/fields/WrittenOffAmount__c.field-meta.xml
<CustomField>
    <fullName>WrittenOffAmount__c</fullName>
    <label>Written off Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>