veygo-app/main/default/objects/Case/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Claim</label>
</RecordType>