veygo-app/main/default/objects/Case/recordTypes/Fraud.recordType-meta.xml
<RecordType>
    <fullName>Fraud</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Fraud</label>
</RecordType>