veygo-app/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Incident</label>
</RecordType>