veygo-app/main/default/objects/Case/recordTypes/Problem.recordType-meta.xml
<RecordType>
    <fullName>Problem</fullName>
    <active>false</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Problem</label>
</RecordType>