veygo-app/main/default/objects/Case/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Question</label>
</RecordType>