veygo-app/main/default/objects/Case/recordTypes/Service_Case.recordType-meta.xml
<RecordType>
    <fullName>Service_Case</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Service Case</label>
</RecordType>