veygo-app/main/default/objects/Case/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <businessProcess>Main for Case</businessProcess>
    <label>Task</label>
</RecordType>