veygo-app/main/default/objects/Case/validationRules/Case_Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp; ISPICKVAL(Type, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You have to set Type in order to resolve the case.</errorMessage>
</ValidationRule>