veygo-app/main/default/objects/Case/listViews/Service_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Service_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Queue</label>
    <queue>Service_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>